--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
-
-</head>
+  <title>SocialME</title>
+<script>
+  window.onload = function() {
+  window.location="go-socialme.000webhostapp.com"
+};
+  </script>
+  </head>
 <body>
 </body>
 </html>
