--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>SocialME</title>
 <script>
   window.onload = function() {
-  window.location="go-socialme.000webhostapp.com";
+  window.location="https://go-socialme.000webhostapp.com";
 };
   </script>
   </head>
