--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
           <p>Please help us fight spam by following the directions below:</p>
         
 
-        <form action="https://formspree.io/mrigankpawagi@gmail.com" method="POST" id="passthrough">
-          <div id="recaptcha" style="text-align:center; display:inline-block"></div>
-        </form>
+        
 
       </div>
     </div>
   </div>
+      <p align="center">
+        If not redirected, <a href="https://go-socialme.000webhostapp.com">click here</a>.
+      </p>
 
 </body>
 </html>
