--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html ><head>
   
   <title>SocialME</title>
+	
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="SocialME - Connecting People" name="description">
+    <meta content="Mrigank" name="author">
+    <meta name="keywords" content="social, socialme, network, chat, connect, post, share">
+	
   <link rel="stylesheet" href="https://d1ma8knj6twvg6.cloudfront.net/static/css/main.css?t=1500639345">
   <link rel="icon" type="image/png" href="https://mrigankpawagi.github.io/images/favicon.ico">
   
